--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Funny Dice Rolle Game." />
+    <meta name="og:title" property="og:title" content="Dice Roller" />
+    <meta name="twitter:card" content="Funny Dice Rolle Game." />
+    <meta name="robots" content="noindex, nofollow" />
     <title>Dice Roller</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+    <link rel="manifest" href="/assets/site.webmanifest">
+    <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="canonical" href="https://elegant-dango-3cc75a.netlify.app/" />
 
     <link rel="stylesheet" href="/css/utils.css" />
     <link rel="stylesheet" href="/css/main.css" />
@@ -20,6 +32,7 @@
 
     <script type="text/javascript" src="/src/animations.js"></script>
     <script type="text/javascript" src="/src/components.js"></script>
+    <script type="text/javascript" src="/src/config.js"></script>
     <script type="text/javascript" src="/src/dice.js"></script>
     <script type="text/javascript" src="/src/game.js"></script>
     <script type="text/javascript" src="/src/player.js"></script>
