--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Funny Dice Rolle Game." />
     <meta name="og:title" property="og:title" content="Dice Roller" />
     <meta name="twitter:card" content="Funny Dice Rolle Game." />
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="nofollow">
+    <meta name="googlebot" content="noindex">
     <title>Dice Roller</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
