--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="canonical" href="https://elegant-dango-3cc75a.netlify.app/" />
+    <link rel="canonical" href="https://studi-dice-roller.netlify.app/" />
 
     <link rel="stylesheet" href="/css/utils.css" />
     <link rel="stylesheet" href="/css/main.css" />
