--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <script type="text/javascript" src="/js/animations.js"></script>
     <script type="text/javascript" src="/js/components.js"></script>
-    <script type="text/javascript" src="/js/e2eConfig.js"></script>
+    <script type="text/javascript" src="/js/config.js"></script>
     <script type="text/javascript" src="/js/dice.js"></script>
     <script type="text/javascript" src="/js/game.js"></script>
     <script type="text/javascript" src="/js/player.js"></script>
